<resources>
    <string name="app_name">UTS Mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi">Persegi</string>
    <string name="segitiga">Segitiga</string>
    <string name="nama">Farel Bayhaqi</string>
    <string name="NIM">2210511073</string>
    <string name="lanjut">Lanjut</string>
    <string name="jariJari">Jari-jari</string>
    <string name="hintJariJari">Masukkan jari-jarinya</string>
    <string name="hitung">Hitung</string>
    <string name="tinggi">Tinggi</string>
    <string name="alas">Alas</string>
    <string name="panjang">Panjang</string>
    <string name="samaPanjang">Lebarnya sama dengan panjang?</string>
    <string name="hintPanjang">Masukkan panjangnya</string>
    <string name="hintTinggi">Masukkan tingginya</string>
    <string name="hintAlas">Masukkan alasnya</string>
    <string name="lebar">Lebar</string>
    <string name="hintLebar">Masukkan lebarnya</string>
</resources>